@@ -5,6 +5,7 @@
 	* Fix for wrong usage of strncat (thanks Pavol)
 	* Adds a variable if_xmms2_connected to hide objects when xmms2d is not
 	running (thanks Lassi)
+	* Fix for buffer overflow with $execi (thanks Cesare)
 
 2008-12-06
 	* Removed duplicate sanity check for diskio
